Add rotation and translation handle to Camera_controller

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,8 @@ set(SOURCE_FILES
 
     src/ui/ui_scene_viewer.cpp
 
+    src/ux/ux_camera_controller.cpp
+
     src/visualization/vi_axes.cpp
     src/visualization/vi_drawable.cpp
 )
